HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DuplicateTypeParameterName/Source/Main.uv
//! Rejected polymorphism specimen for duplicate generic type parameter names.

public procedure duplicateTypeParameterNameReference<TValue; TValue>(
    value: TValue
) -> i32 {
    return 0
}
